[gd_scene load_steps=2 format=2]

[ext_resource path="res://RegionGUI/RegionInspector.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -744.0
margin_bottom = -536.0
rect_min_size = Vector2( 0, 64 )
rect_pivot_offset = Vector2( -658, -86 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TileText" type="Label" parent="HBoxContainer"]
margin_top = 13.0
margin_right = 44.0
margin_bottom = 27.0
text = "tile ID:"

[node name="TileID" type="Label" parent="HBoxContainer"]
margin_left = 48.0
margin_top = 13.0
margin_right = 64.0
margin_bottom = 27.0
text = "00"

[node name="RegionText" type="Label" parent="HBoxContainer"]
margin_left = 68.0
margin_top = 13.0
margin_right = 115.0
margin_bottom = 27.0
text = "Region:"

[node name="RegionID" type="Label" parent="HBoxContainer"]
margin_left = 119.0
margin_top = 13.0
margin_right = 135.0
margin_bottom = 27.0
text = "00"

[node name="ArtText" type="Label" parent="HBoxContainer"]
margin_left = 139.0
margin_top = 13.0
margin_right = 162.0
margin_bottom = 27.0
text = "Art:"

[node name="ArtNum" type="Label" parent="HBoxContainer"]
margin_left = 166.0
margin_top = 13.0
margin_right = 182.0
margin_bottom = 27.0
text = "00"

[node name="MissionText" type="Label" parent="HBoxContainer"]
margin_left = 186.0
margin_top = 13.0
margin_right = 213.0
margin_bottom = 27.0
text = "Mis:"

[node name="MissionID" type="Label" parent="HBoxContainer"]
margin_left = 217.0
margin_top = 13.0
margin_right = 233.0
margin_bottom = 27.0
text = "00"
